[metadata]
name = boost_histogram
description = The Boost::Histogram Python wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/boost-histogram
author = Hans Dembinski and Henry Schreiner
author_email = hschrein@cern.ch
maintainer = Hans Dembinski and Henry Schreiner
maintainer_email = hschrein@cern.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    dataclasses;python_version<'3.7'
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests
    extern

[tool:pytest]
junit_family = xunit2
addopts = --benchmark-disable -Wd --strict-markers
xfail_strict = True
testpaths =
    tests
required_plugins =
    pytest-benchmark

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
max-line-length = 80
max-complexity = 13
select = C, E, F, W, B, B9, T
ignore = E203, E231, E501, E722, W503, B950
per-file-ignores =
    tests/*: T
    examples/*: T
    notebooks/*: T
    docs/*: T
    scripts/*: T
    setup.py: T
    setup_helpers.py: C901

[mypy]
warn_unused_configs = True
python_version = 3.6
files = src
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-boost_histogram.version]
ignore_missing_imports = True

[mypy-boost_histogram._core]
ignore_missing_imports = True

[mypy-boost_histogram._core.*]
ignore_missing_imports = True

[check-manifest]
ignore =
    .all-contributorsrc
    .clang-format
    .cmake-format.yaml
    .pre-commit-config.yaml
    .pre-commit-nodocker.yaml
    .readthedocs.yml
    .clang-tidy
    examples/**
    notebooks/**
    docs/**
    scripts/**
    dev-requirements.txt
    extern/**/*.py
    extern/**/*.md
    extern/**/*.rst
    extern/**/*.toml
    extern/*/checks/**
    extern/*/test/**
    extern/*/benchmark/**
    extern/*/doc/**
    extern/*/examples/**
    extern/*/tools/**
    extern/pybind11/docs/**
    extern/pybind11/tests/**
    CMakeLists.txt
    extern/*/README.md
    CONTRIBUTING.md
    Jamfile
    configure
    *.clang_complete
    *.html
    *.in
    *.json
    *.yml
    src/boost_histogram/_core.*
    src/boost_histogram/version.py
    tests/.pytest_cache/**
