[metadata]
name = boost_histogram
description = The Boost::Histogram Python wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/boost-histogram
author = Hans Dembinski and Henry Schreiner
author_email = hschrein@cern.ch
maintainer = Hans Dembinski and Henry Schreiner
maintainer_email = hschrein@cern.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
    Typing :: Typed
keywords =
    histogram
    boost-histogram
project_urls =
    Documentation = https://boost-histogram.readthedocs.io/
    Bug Tracker = https://github.com/scikit-hep/boost-histogram/issues
    Discussions = https://github.com/scikit-hep/boost-histogram/discussions
    Changelog = https://boost-histogram.readthedocs.io/en/latest/CHANGELOG.html
    Chat =  https://gitter.im/HSF/PyHEP-histogramming

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    typing-extensions;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
